--- a/src/assets/color.scss
+++ b/src/assets/color.scss
@@ -4,3 +4,5 @@ $bordercolor1:#DEE2E6;
 $butonbackground2:#0273DC;
 $maincolor:#ffff;
 $bordercolor2:#E9ECEF;
+$butonbackground3:#E8F7E9;
+$butoncolor2:#097038;
