--- a/src/assets/color.scss
+++ b/src/assets/color.scss
@@ -7,6 +7,21 @@ $color-primary-light: #FFF4F4;
 $color-30: #E9ECEF;
 $color-40: #DEE2E6;
 $color-dark: #343A46;
-
-
-
+$tertiary-color: #FF8400;
+$color-black: #00000000;
+$color-100: #262B39;
+$color-10: #F8F9FB;
+$color-05: #F9FAFC;
+$color-danger: #E83F2E;
+$color-80: #495057;
+$color-90: #2E3649;
+$color-white: #FFFFFF;
+$color-success: #66BB6A;
+$color-20: #F1F3F5;
+$color-50: #CED4DA;
+$color-70: #868E96;
+$color-light: #A2A8B6;
+$color-default: #45516D;
+$color-primary-color: #FF3200;
+$color-60: #ADB5BD;
+$color-unnamed-color-343a40: #343A40;
